; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_alignmentCollFunc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_alignmentCollFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@unaligned_string_counter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*, i32, i8*)* @alignmentCollFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alignmentCollFunc(i8* %0, i32 %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %9, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %5
  %17 = load i32, i32* %7, align 4
  br label %20

18:                                               ; preds = %5
  %19 = load i32, i32* %9, align 4
  br label %20

20:                                               ; preds = %18, %16
  %21 = phi i32 [ %17, %16 ], [ %19, %18 ]
  store i32 %21, i32* %12, align 4
  %22 = load i32, i32* %7, align 4
  %23 = icmp sgt i32 %22, 0
  br i1 %23, label %24, label %32

24:                                               ; preds = %20
  %25 = load i8*, i8** %8, align 8
  %26 = call i32 @SQLITE_PTR_TO_INT(i8* %25)
  %27 = and i32 1, %26
  %28 = icmp eq i32 1, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load i32, i32* @unaligned_string_counter, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* @unaligned_string_counter, align 4
  br label %32

32:                                               ; preds = %29, %24, %20
  %33 = load i32, i32* %9, align 4
  %34 = icmp sgt i32 %33, 0
  br i1 %34, label %35, label %43

35:                                               ; preds = %32
  %36 = load i8*, i8** %10, align 8
  %37 = call i32 @SQLITE_PTR_TO_INT(i8* %36)
  %38 = and i32 1, %37
  %39 = icmp eq i32 1, %38
  br i1 %39, label %40, label %43

40:                                               ; preds = %35
  %41 = load i32, i32* @unaligned_string_counter, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* @unaligned_string_counter, align 4
  br label %43

43:                                               ; preds = %40, %35, %32
  %44 = load i8*, i8** %8, align 8
  %45 = load i8*, i8** %10, align 8
  %46 = load i32, i32* %12, align 4
  %47 = call i32 @memcmp(i8* %44, i8* %45, i32 %46)
  store i32 %47, i32* %11, align 4
  %48 = load i32, i32* %11, align 4
  %49 = icmp eq i32 %48, 0
  br i1 %49, label %50, label %54

50:                                               ; preds = %43
  %51 = load i32, i32* %7, align 4
  %52 = load i32, i32* %9, align 4
  %53 = sub nsw i32 %51, %52
  store i32 %53, i32* %11, align 4
  br label %54

54:                                               ; preds = %50, %43
  %55 = load i32, i32* %11, align 4
  ret i32 %55
}

declare dso_local i32 @SQLITE_PTR_TO_INT(i8*) #1

declare dso_local i32 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
